--- a/src/app/features/crm/components/division/division.component.html
+++ b/src/app/features/crm/components/division/division.component.html
@@ -169,9 +169,9 @@
             />
           </div> -->
           <div class="col-sm-8 col-6">
-            <div class="float-end">
+            <!-- <div class="float-end">
               <span class="icon-circle"><i class="pi pi-pencil"></i></span>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="row mb-5">
