--- a/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
@@ -23,47 +23,41 @@
         <div class="card mb-4">
 
           <div class="card-body mx-2 mt-2">
-            <!-- <button class="btn btn-primary float-end p-2" data-bs-toggle="modal"
-              data-bs-target="#selectClient">Select Existing Client
-            </button> -->
-            <h6 class="text-primary" style="font-weight: 500; font-size: 16px">Basic Details</h6>
+            
+            <h6 class="text-primary font-weight-bold" [ngStyle]="{ 'font-size': '16px' }">Basic Details</h6>
+
+            <!-- Error Message Display -->
             <div class="row" *ngIf="getFormControlsNameWithErrors.length > 0">
-              <div class="col-12 text-danger required" style="font-size: 11px; font-weight: 500"
+              <div class="col-12 text-danger required" [ngStyle]="{ 'font-size': '11px', 'font-weight': '500' }" 
                   *ngFor="let item of getFormControlsNameWithErrors">{{ item | uppercase }}
               </div>
             </div>
 
+            <!-- Client Type Selection -->
             <div class="row" *ngIf="isTelQuoteOrWebQuote()">
               <div class="col-md-4">
-                <br />
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" value="NEW_CLIENT"
-                        formControlName="clientTypeId" id="inlineRadio1" (click)="resetForm()"/>
+                  <input class="form-check-input" type="radio" value="NEW_CLIENT" formControlName="clientTypeId" 
+                        id="inlineRadio1" (click)="resetForm()"/>
                   <label class="form-check-label" for="inlineRadio1">New Client</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" value="EXISTING_CLIENT"
-                        formControlName="clientTypeId" id="inlineRadio2"/>
+                  <input class="form-check-input" type="radio" value="EXISTING_CLIENT" formControlName="clientTypeId" 
+                        id="inlineRadio2"/>
                   <label class="form-check-label" for="inlineRadio2">Existing Client</label>
                 </div>
               </div>
             </div>
 
+            <!-- Client Dropdown Selection -->
             <div class="row" >
               <div class="col-md-4" *ngIf="this.clientForm.get('clientTypeId').value === 'EXISTING_CLIENT'">
-                <div class="label">
-                  <label for="" class="quote-label">Client</label>
-                </div>
-                <div>
-                  <p-dropdown id="value" [options]="clientList" [optionLabel]="'details'"
-                    [dataKey]="'value'" [editable]="true"
-                    [style]="{ width: '100%',
-                               height: '37px',
-                              'line-height': '10px' }"
-                    placeholder="Select or Type Client name" (onChange)="searchClient()"
-                    formControlName="client" class="select">
+                <label for="value" class="quote-label">Client</label>
+                  <p-dropdown id="value" [options]="clientList" [optionLabel]="'details'" [dataKey]="'value'" 
+                              [editable]="true" [ngStyle]="{ width: '100%', height: '37px', 'line-height': '10px' }"
+                              placeholder="Select or Type Client name" (onChange)="searchClient()"
+                              formControlName="client" class="select">
                   </p-dropdown>
-                </div>
               </div>
             </div>
 
@@ -91,25 +85,22 @@
                   [id]="getFormData('FIRST_NAME')['data']['label']" formControlName="firstName"/>
               </div>
 
-              <div class="col-md-4" *ngIf="getFormData('MODE_OF_IDENTITY')">
-                <label class="quote-label" 
-                    [for]="getFormData('MODE_OF_IDENTITY')['data']['label']"
-                    [class.required]="getFormData('MODE_OF_IDENTITY')['data']['required']">
-                  {{ getFormData("MODE_OF_IDENTITY")["data"]["label"] | titlecase }}
+              <div class="col-md-4" *ngIf="getFormData('DATE_OF_BIRTH')">
+                <label class="quote-label"
+                    [for]="getFormData('DATE_OF_BIRTH')['data']['label']" 
+                    [class.required]="getFormData('DATE_OF_BIRTH')['data']['required']">
+                  {{ getFormData("DATE_OF_BIRTH")["data"]["label"] | titlecase }}
                 </label>
-                <select id="modeOfIdentity" class="form-select form-select mb-1"
-                    [ngClass]="{'is-invalid': highlightInvalid('modeOfIdentity')}"
-                    [id]="getFormData('MODE_OF_IDENTITY')['data']['label']"
-                    placement="right" 
-                    formControlName="modeOfIdentity"
-                    (change)="checkIdentityType($event)">
-                  <option selected="true" disabled="disabled">
-                    Select {{ getFormData("MODE_OF_IDENTITY")["data"]["label"] | titlecase }}
-                  </option>
-                  <option *ngFor="let data of identifierTypeList | sort : 'asc' : 'name'" [value]="data.id">
-                      {{ data.name?.replaceAll("_", " ") | titlecase }}</option>
-                </select>
-                <div *ngIf="highlightInvalid('modeOfIdentity')" class="invalid-feedback">Mode of Identity is required</div>
+                <p-calendar 
+                    [maxDate]="minDate" 
+                    [defaultDate]="minDate" 
+                    [id]="getFormData('DATE_OF_BIRTH')['data']['label']" ngDefaultControl 
+                    formControlName="dateOfBirth" dateFormat="dd/mm/yy" 
+                    [showIcon]="true" 
+                    [showButtonBar]="true"
+                    [ngClass]="{'is-invalid': highlightInvalid('dateOfBirth')}">
+                </p-calendar>
+                <div *ngIf="highlightInvalid('dateOfBirth')" class="invalid-feedback">Date of Birth is required</div>
               </div>
             
             </div>
@@ -137,22 +128,25 @@
                 <div *ngIf="highlightInvalid('countryId')" class="invalid-feedback">Nationality is required</div>
               </div>
 
-              <div class="col-md-4" *ngIf="getFormData('DATE_OF_BIRTH')">
-                <label class="quote-label"
-                    [for]="getFormData('DATE_OF_BIRTH')['data']['label']" 
-                    [class.required]="getFormData('DATE_OF_BIRTH')['data']['required']">
-                  {{ getFormData("DATE_OF_BIRTH")["data"]["label"] | titlecase }}
+              <div class="col-md-4" *ngIf="getFormData('MODE_OF_IDENTITY')">
+                <label class="quote-label" 
+                    [for]="getFormData('MODE_OF_IDENTITY')['data']['label']"
+                    [class.required]="getFormData('MODE_OF_IDENTITY')['data']['required']">
+                  {{ getFormData("MODE_OF_IDENTITY")["data"]["label"] | titlecase }}
                 </label>
-                <p-calendar 
-                    [maxDate]="minDate" 
-                    [defaultDate]="minDate" 
-                    [id]="getFormData('DATE_OF_BIRTH')['data']['label']" ngDefaultControl 
-                    formControlName="dateOfBirth" dateFormat="dd/mm/yy" 
-                    [showIcon]="true" 
-                    [showButtonBar]="true"
-                    [ngClass]="{'is-invalid': highlightInvalid('dateOfBirth')}">
-                </p-calendar>
-                <div *ngIf="highlightInvalid('dateOfBirth')" class="invalid-feedback">Date of Birth is required</div>
+                <select id="modeOfIdentity" class="form-select form-select mb-1"
+                    [ngClass]="{'is-invalid': highlightInvalid('modeOfIdentity')}"
+                    [id]="getFormData('MODE_OF_IDENTITY')['data']['label']"
+                    placement="right" 
+                    formControlName="modeOfIdentity"
+                    (change)="checkIdentityType($event)">
+                  <option selected="true" disabled="disabled">
+                    Select {{ getFormData("MODE_OF_IDENTITY")["data"]["label"] | titlecase }}
+                  </option>
+                  <option *ngFor="let data of identifierTypeList | sort : 'asc' : 'name'" [value]="data.id">
+                      {{ data.name?.replaceAll("_", " ") | titlecase }}</option>
+                </select>
+                <div *ngIf="highlightInvalid('modeOfIdentity')" class="invalid-feedback">Mode of Identity is required</div>
               </div>
 
               <div class="col-md-4" *ngIf="getFormData('MODE_OF_IDENTITY_NO')">
@@ -163,7 +157,8 @@
                   </span>
                 </label>
                 <input type="text" [id]="getFormData('MODE_OF_IDENTITY_NO')['data']['label']"
-                  class="form-control form-control mb-1" formControlName="modeOfIdentityNumber"/>
+                  class="form-control form-control mb-1" formControlName="modeOfIdentityNumber"
+                  [ngClass]="{'is-invalid': highlightInvalid('modeOfIdentityNumber')}"/>
                 <div *ngIf="checkErrorThatsTouchedAndDirty() || checkError()" class="text-danger">
                   Incorrect ID No Format
                 </div>
@@ -194,13 +189,15 @@
                 <br />
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" value="F"
-                    formControlName="gender" [id]="getFormData('GENDER')['data']['label'] + '_female'"/>
+                    formControlName="gender" [id]="getFormData('GENDER')['data']['label'] + '_female'"
+                    [ngClass]="{'is-invalid': highlightInvalid('gender')}"/>
                   <label class="form-check-label"
                     [for]="getFormData('GENDER')['data']['label'] + '_female'">Female</label>
                 </div>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" value="M"
-                    formControlName="gender" [id]="getFormData('GENDER')['data']['label'] + '_male'"/>
+                    formControlName="gender" [id]="getFormData('GENDER')['data']['label'] + '_male'"
+                    [ngClass]="{'is-invalid': highlightInvalid('gender')}"/>
                   <label class="form-check-label" [for]="getFormData('GENDER')['data']['label'] + '_male'">Male</label>
                 </div>
               </div>
